--- a/tomcat5/build.xml
+++ b/tomcat5/build.xml
@@ -41,6 +41,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
         -->
         <pathelement location="${nb_root}/j2eeserver/netbeans/modules/j2eeserver.jar"/>
+        <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/ext/javax77.jar"/>
         <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/ext/jsr88javax.jar"/>
         <!--<pathelement location="${nb_root}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>-->
         <fileset dir="${nb_root}/openide/netbeans/lib">
