Add build target for tasklist/compiler, and experimental tasklist module contributed by Tim Lebedkov.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -525,6 +525,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module tasklist/html..."/>
     <ant dir="../tasklist/html" target="netbeans"/>
   </target>
+  <target name="all-tasklist/compiler" depends="all-openide,all-tasklist/api,all-tasklist/core,all-core/settings,all-openide/compiler,all-core/compiler">
+    <echo message="Building module tasklist/html..."/>
+    <ant dir="../tasklist/html" target="netbeans"/>
+  </target>
 
   <target name="all-testtools" depends="all-openide,all-openide/compiler,all-openide/execution,all-openide/io,all-core,all-java,all-ant,all-jemmy,all-jemmysupport,all-jellytools">
     <echo message="Building module testtools..."/>
