--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -526,8 +526,8 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <ant dir="../tasklist/html" target="netbeans"/>
   </target>
   <target name="all-tasklist/compiler" depends="all-openide,all-tasklist/api,all-tasklist/core,all-core/settings,all-openide/compiler,all-core/compiler">
-    <echo message="Building module tasklist/html..."/>
-    <ant dir="../tasklist/html" target="netbeans"/>
+    <echo message="Building module tasklist/compiler..."/>
+    <ant dir="../tasklist/compiler" target="netbeans"/>
   </target>
 
   <target name="all-testtools" depends="all-openide,all-openide/compiler,all-openide/execution,all-openide/io,all-core,all-java,all-ant,all-jemmy,all-jemmysupport,all-jellytools">
