--- a/schema2beans/src/org/netbeans/modules/schema2beans/Bundle.properties
+++ b/schema2beans/src/org/netbeans/modules/schema2beans/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 # For manifest.mf at top level
@@ -47,7 +47,7 @@ CantCreateDirIsFile_msg=Cannot create the directory \"{0}\" (already exists as a
 RenamedProperty_msg=Renamed property from \"{0}\" to \"{1}\", due to duplicate names or a forbidden name.
 MSG_UsingMdd=Using the mdd information from {0}
 MSG_CreatedDirectory=Created directory {0}
-MSG_GenerationSummary=The root element is ''{0}'' and it''s class is ''{1}''.
+MSG_GenerationSummary=The root element is ''{0}'' and its class is ''{1}''.
 MSG_SkippingGenerationDueToTime=Skipping generation due to generated files are newer than source files.
 
 # Class BeanProp:
