--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -82,6 +82,9 @@ LBL_Action_OpenTest=Open Test
 MSG_format_hint=<hints on how to use executor...>\n{myOptionVal} - use my option
 
 MSG_setproperties_failed=Unable to set properties for selected type of execution.
+
+#PARTI18N - the message should be localized, but each line has to start with '#' sign, 
+#           so it is considered as a comment
 PROP_properties_default_value=#\n# set properties in format <property_name>=<value>\n#\n
 HINT_properties=Properties
 PROP_properties=Properties
