Updated for trunk Looks.

--- a/performance/threaddemo/build.xml
+++ b/performance/threaddemo/build.xml
@@ -20,9 +20,8 @@ Microsystems, Inc. All Rights Reserved.
     <!-- Trunk, except Mutex*.java should be with tag mutex_32439: -->
     <property name="openide.jar" location="???/openide/netbeans/lib/openide.jar"/>
     <property name="naming.jar" location="${nbroot}/core/naming/netbeans/modules/autoload/naming.jar"/>
-    <!-- Must be looks_jul_2002_private_b branch -->
-    <property name="looks" location="???/openidex/looks"/>
-    <property name="looks.jar" location="${looks}/netbeans/modules/autoload/looks.jar"/>
+    <property name="looks" location="${nbroot}/openide/looks"/>
+    <property name="looks.jar" location="${looks}/netbeans/modules/autoload/openide-looks.jar"/>
     <property name="Spin.jar" location="???/spin-1.1/Spin.jar"/>
     <!-- only needed for optit target: -->
     <property name="optit" location="???/optit"/>
