Publishing Looks II on Dev Alpha AU, and also in the Unsupported section of the Dev APIs.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -197,7 +197,7 @@ config.modules.bloated=${config.modules.stable-with-apisupport}, \
         metrics, \
         multicompile, \
         objectbrowser, \
-        openidex/looks, \
+        openide/looks, \
         remotefs, \
         serialversion, \
         sysprops, \
@@ -247,7 +247,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         metrics, \
         multicompile, \
         objectbrowser, \
-        openidex/looks, \
+        openide/looks, \
         remotefs, \
         rmi, \
         serialversion, \
@@ -285,13 +285,13 @@ config.fixedmodules.javadoc=openide, \
         java/srcmodel, \
         debuggercore/oldapi, \
         lexer, \
-        openidex/looks, \
         mdr, \
         vcscore, \
         xml/api, \
 	tasklist/api
 config.modules.javadoc=jemmy, \
         jellytools, \
+        openide/looks, \
 	core/term
 
 # configuration for signature test builds
