--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -209,6 +209,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module core/settings..."/>
     <ant dir="../core/settings" target="netbeans"/>
   </target>
+  <target name="all-openide/looks" depends="all-openide,all-openide/loaders,all-core/naming">
+    <echo message="Building module openide/looks..."/>
+    <ant dir="../openide/looks" target="netbeans"/>
+  </target>
 
   <!-- And the modules: -->
   <target name="all-ant" depends="all-openide,all-core/javahelp,all-openide/deprecated,all-openide/compiler,all-openide/execution,all-openide/io">
