--- a/performance/threaddemo/build.xml
+++ b/performance/threaddemo/build.xml
@@ -51,7 +51,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="build" depends="build-openide,build-looks">
-        <javac srcdir="src" destdir="src" debug="true" deprecation="true">
+        <javac srcdir="src" destdir="src" debug="true" deprecation="true" source="1.4">
             <classpath refid="cp"/>
         </javac>
         <jar jarfile="threaddemo.jar" manifest="manifest.mf">
@@ -69,6 +69,7 @@ Microsystems, Inc. All Rights Reserved.
             </classpath>
             <arg file="${testdir}"/>
             <jvmarg value="-Xmx32m"/>
+            <jvmarg value="-ea"/>
         </java>
     </target>
     
