Playing with a derived model.

--- a/performance/threaddemo/build.xml
+++ b/performance/threaddemo/build.xml
@@ -17,6 +17,8 @@ Microsystems, Inc. All Rights Reserved.
     <property file="user.build.properties"/>
 
     <property name="nbroot" location="../.."/>
+    <property name="xerces.jar" location="${nbroot}/core/external/xerces-2.0.2.jar"/>
+    <property name="xml-apis.jar" location="${nbroot}/core/external/xml-apis-1.0b2.jar"/>
     <!-- Trunk, except Mutex*.java should be with tag mutex_32439: -->
     <property name="openide.jar" location="???/openide/netbeans/lib/openide.jar"/>
     <property name="naming.jar" location="${nbroot}/core/naming/netbeans/modules/autoload/naming.jar"/>
@@ -34,6 +36,8 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${naming.jar}"/>
         <pathelement location="${looks.jar}"/>
         <pathelement location="${Spin.jar}"/>
+        <pathelement location="${xerces.jar}"/>
+        <pathelement location="${xml-apis.jar}"/>
     </path>
     
     <target name="init">
@@ -100,7 +104,7 @@ Microsystems, Inc. All Rights Reserved.
             <arg value="threaddemo.Main"/>
             <arg file="${testdir}"/>
             <jvmarg value="-Xmx64m"/>
-            <jvmarg value="-ea"/>
+            <!--<jvmarg value="-ea"/>-->
             <sysproperty key="OPTITDIR" file="${optit}"/>
             <env key="LD_LIBRARY_PATH" path="${optit}/lib"/>
             <jvmarg value="-Xbootclasspath/a:${optit}/lib/oibcp.jar"/>
