--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -197,7 +197,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module core/naming..."/>
     <ant dir="../core/naming" target="netbeans"/>
   </target>
-  <target name="all-core/windows" depends="all-openide">
+  <target name="all-core/windows" depends="all-openide,all-openide/loaders">
     <echo message="Building module core/windows..."/>
     <ant dir="../core/windows" target="netbeans"/>
   </target>
