--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -129,6 +129,11 @@ PROP_SHOW_FILE_EXTENSIONS=Show File Extensions
 HINT_SHOW_FILE_EXTENSIONS=If True, file extensions are shown in the Explorer.
 PROP_WWW_BROWSER=Web Browser
 HINT_WWW_BROWSER=The browser used to display WWW pages.
+PROP_UI_Mode=UI Mode
+HINT_UI_Mode=UI Mode
+PROP_MINI_STATUS_BAR_STATE=Ministatus bar state.
+HINT_MINI_STATUS_BAR_STATE=Ministatus bar state.
+
 
 #LoaderPoolNode
 CTL_LoaderPool=Object Types
@@ -632,3 +637,11 @@ EXC_InvalidRegularExpressionForIgnoredFiles=Please enter a valid regular express
 # NbURLStreamHandlerFactory
 # {0} - URL
 EXC_nbres_cannot_connect=Could not connect to URL {0}. No such resource was found.
+
+# UIModePropertyEditor
+CTL_SdiMode=SDI Mode
+CTL_MdiMode=MDI Mode
+
+# NbPlaces
+CTL_NoWorkspaces=No Workspaces
+
