Stuff forgotten in core/windows separation. Most seriously, core/windows was uncompilable under JDK 1.3 due to missing xml-apis.jar.

--- a/core.windows/build.xml
+++ b/core.windows/build.xml
@@ -32,6 +32,9 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="../../openide/netbeans/lib/openide.jar"/>
                 <pathelement location="../../openide/loaders/netbeans/lib/openide-loaders.jar"/>
                 <pathelement location="../netbeans/lib/core.jar"/>
+                <fileset dir="../external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
             </classpath>
         </javac>
     </target>
