--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -382,7 +382,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <ant dir="../javaembeddedserver" target="netbeans"/>
   </target>
   -->
-  <target name="all-jellytools" depends="all-openide,all-core,all-core/term,all-jemmy,all-xtest,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated,all-core/windows,all-core/execution,all-core/compiler">
+  <target name="all-jellytools" depends="all-openide,all-openide/loaders,all-core,all-core/term,all-jemmy,all-xtest,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated,all-core/windows,all-core/execution,all-core/compiler">
     <echo message="Building module jellytools..."/>
     <ant dir="../jellytools" target="netbeans"/>
   </target>
