Add module jasm alfa autoupdate

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -234,6 +234,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         externaleditor, \
         freestylebrowser, \
         innertesters, \
+        jasm, \
         jellytools, \
         jemmy, \
         jemmysupport, \
