--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -115,7 +115,8 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nbroot}/debuggerjpda/api/netbeans/modules/autoload/debuggerjpda-api.jar"/>
         <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
         <pathelement location="../openide/loaders/netbeans/lib/openide-loaders.jar"/>
-        <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="${nbroot}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> 
+        <pathelement location="${nbroot}/libs/external/j2eeeditor-1.0.jar"/> <!-- XXX -->
 <!--         <pathelement location="${nbroot}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/> 
         XXX -->
         <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/> <!-- XXX -->
@@ -221,7 +222,8 @@ symbols and copy jar file(s)">
               <exclude name="**/*-test.jar" /> 
             </fileset>
         </copy>
-        <copy todir="${nbroot}/nbbuild/netbeans/modules/">
+      	    <copy todir="${nbroot}/nbbuild/netbeans/modules/"> 
+      <!--  <copy todir="../../f4j_all/f4jbuild/firststart/modules/"> -->
             <fileset dir="netbeans/modules">
               <exclude name="**/locale/*"/>
               <exclude name="**/*-test.jar" /> 
