Publishing contrib/archiver to daily alpha AU.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -222,11 +222,11 @@ config.modules.testtools=jemmysupport, \
 
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
-# reconsider module cpp
 config.fixedmodules.daily-alpha-nbms=${config.fixedmodules.stable-with-apisupport}
 config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         ant/grammar, \
         classclosure, \
+        contrib/archiver, \
         corba, \
         core/naming, \
         cpp, \
