--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -161,7 +161,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building core/deprecated..."/>
     <ant dir="../core/deprecated" target="netbeans"/>
   </target>
-  <target name="all-java/srcmodel" depends="all-openide">
+  <target name="all-java/srcmodel" depends="all-openide,all-openide/loaders">
     <echo message="Building java/srcmodel..."/>
     <ant dir="../java/srcmodel" target="netbeans"/>
   </target>
