Added call of unscramble in libs/external, where one of the classpath elements is located (j2eeeditor-1.0.jar). This is necessary for builds from realy clean sources.

--- a/j2eeserver/build.xml
+++ b/j2eeserver/build.xml
@@ -41,6 +41,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="external">
       <ant dir="external" target="unscramble"/>
+      <ant dir="${nbroot}/libs/external" target="unscramble"/>
   </target>
 
   <target name="nbm" depends="netbeans">
