#33477 Missed resources for FileSelector.

--- a/core.windows/src/org/netbeans/core/windows/Bundle.properties
+++ b/core.windows/src/org/netbeans/core/windows/Bundle.properties
@@ -168,3 +168,12 @@ HINT_ToolbarVisible=Whether the toolbar is visible in current toolbar configurat
 CTL_ExplorerTitle=Explorer
 CTL_Customizer_dialog_title=Customizer Dialog
 
+# FileSelector
+CTL_FileSelectorOkButton=OK
+CTL_FileSelectorCancelButton=Cancel
+ACSD_FileSelectorOkButton=OK
+ACSD_FileSelectorCancelButton=Cancel
+ACSD_FileSelectorDialog=File selector dialog
+ACSN_FileSelectorTreeView=Tree View
+ACSD_FileSelectorTreeView=Tree view in file selector
+ACSD_FileSelectorComboBox=Select a filesystem.
