core/windows module separation fix

--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -39,6 +39,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar" />
         <pathelement location="${nbroot}/openide/io/netbeans/modules/autoload/openide-io.jar" />
         <pathelement location="${nbroot}/core/netbeans/lib/core.jar" />
+        <pathelement location="${nbroot}/core/windows/netbeans/modules/core-windows.jar" />
         <pathelement location="${nbroot}/java/netbeans/modules/java.jar" />
         <pathelement location="${nbroot}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar" />
         <pathelement location="${nbroot}/ant/netbeans/modules/ant.jar" />
