--- a/web.core/src/org/netbeans/modules/web/core/resources/templates/JSP.template
+++ b/web.core/src/org/netbeans/modules/web/core/resources/templates/JSP.template
@@ -3,7 +3,7 @@
 <head><title>JSP Page</title></head>
 <body>
 
-<%-- <jsp:useBean id="beanInstanceName" scope="session" class="package.class" /> --%>
+<%-- <jsp:useBean id="beanInstanceName" scope="session" class="beanPackage.BeanClassName" /> --%>
 <%-- <jsp:getProperty name="beanInstanceName"  property="propertyName" /> --%>
 
 </body>
