Next dev build should publish Registry API/SPI in the "Unsupported APIs" area.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -291,6 +291,7 @@ config.fixedmodules.javadoc=openide, \
 	tasklist/api
 config.modules.javadoc=jemmy, \
         jellytools, \
+        openide/registry, \
         openide/looks, \
 	core/term
 
