--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -221,6 +221,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module openide/looks..."/>
     <ant dir="../openide/looks" target="netbeans"/>
   </target>
+  <target name="all-openide/registry" depends="all-openide">
+    <echo message="Building module openide/registry..."/>
+    <ant dir="../openide/registry" target="netbeans"/>
+  </target>
 
   <!-- And the modules: -->
   <target name="all-ant" depends="all-openide,all-core/javahelp,all-openide/deprecated,all-openide/compiler,all-openide/execution,all-openide/io">
