--- a/project.libraries/build.xml
+++ b/project.libraries/build.xml
@@ -60,6 +60,13 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="try" depends="jars" description="Clean, build, deploy and run in debugging JVM mode.">
+        <locjar jarfile="libraries-test.jar" manifest="test/manifest.mf" compress="false">
+            <locale name="ja"/>
+            <fileset dir=".">
+                <include name="test/**"/>
+            </fileset>
+        </locjar>
+        <copy file="libraries-test.jar" tofile="../../nbbuild/netbeans/modules/libraries-test.jar"/>
         <copy file="netbeans/modules/autoload/libraries.jar" tofile="../../nbbuild/netbeans/modules/libraries.jar"/>
         <exec executable="../../nbbuild/netbeans/bin/runide.sh">
             <arg line="-userdir /tmp/prj-ud -fontsize 14 -J-Xdebug -J-Xnoagent -J-Djava.compiler=NONE -J-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8888"/>
